--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <source src="portfolio.mp4" type="video/mp4">
             </video>
             <div class="b-logo">
-                <img src="Capture-removebg-preview (1).png" alt="logo">
+                <img src="Asset 1.png" alt="logo">
             </div>
             <div class="container">
-                <h2>DECEMBER 7</h2>
-                <p>PEACOCK THEATER, LOS ANGELES</p>
+                <h2>reMARKable</h2>
+                <p>Have a glimpse of my brain-child that surely left a MARK on different industries.</p>
             </div>
             <div class="c-button">
                 <a href="" class="B1"></a>
