--- a/index.html
+++ b/index.html
@@ -83,12 +83,9 @@
         </div>
         <div class="mail">
             <div class="m-text">
-                <h1>TGA INSIDER</h1>
-                <P>SIGN UP FOR <br> UPDATES & NEWS</P>
-                <input type="text" placeholder="Email" class="inp1">
-                <br>
-                <input type="checkbox" id="check" class="inp2">
-                <label for="check">YOU AGREE TO RECEIVE OCCASIONAL UPDATES & NEWS LEADING UP THE SHOW</label>
+                <h1>"ALWAYS  <BR> LEAVE <BR> A MARK."</h1>
+                <P>LET'S CRAFT YOUR IDEA TO LIFE</P>
+                <input type="text" placeholder="Tell me something..." class="inp1">
                 <br>
                 <button>SUBMIT</button>
             </div>
