--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="x-icon" href="Asset 3.png">
     <title>Mark Cayunda</title>
@@ -33,7 +32,7 @@
             </div>
             <div class="c-button">
                 <a href="" class="B1"></a>
-                <a href="" class="B2">SHOW WORKS</a>
+                <a href="" class="B2">SHOW GALLERY</a>
             </div>
         </div>
         <div class="b2-content">
