--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="30860c37-be19-4e46-a643-91ede0879489.png" alt="Logo" class="Logo">
             <button class="btn1">HOME</button>
             <button class="btn2"><a href="works.html">GALLERY</a></button>
-            <button class="btn3"><a href="about.html">ABOUT ME</a></button>
+            <button class="btn3"><a href="about.html">ABOUT</a></button>
             </div>
         </div>
         <div class="m-content">
@@ -96,13 +96,9 @@
                 </div>
                 <div class="cli">
                     <ul>
+                        <li>HOME</li>
+                        <li>GALLERY</li>
                         <li>ABOUT</li>
-                        <li>JURY</li>
-                        <li>PRIVACY</li>
-                        <li>SUBSCRIPTIONS</li>
-                        <li>FAQ</li>
-                        <li>CONTENT</li>
-                        <li>TERMS</li>
                     </ul>
                 </div>
                 <div class="socmed">
@@ -121,7 +117,7 @@
                     </div>
                 </div>
                 <div class="cp">
-                    <h1>© 2023, Mark Cayunda</h1>
+                    <h1>© 2023, Leave a MARK!</h1>
                 </div>
             </div>
         </div>
