--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=
+    , initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="x-icon" href="Asset 3.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <title>Mark Cayunda</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
@@ -38,7 +42,7 @@
         <div class="b2-content">
             <div class="h-content">
                 <h2>ARTWORKS</h2>
-                <a href="">VIEW ALL</a>
+                <a href="works.html">VIEW ALL</a>
             </div>
             <div class="cir">
                 <p class="p1">uwu</p
@@ -82,11 +86,13 @@
         </div>
         <div class="mail">
             <div class="m-text">
-                <h1>"ALWAYS  <BR> LEAVE <BR> A MARK."</h1>
+                <h1>"ALWAYS LEAVE <BR> A MARK."</h1>
                 <P>LET'S CRAFT YOUR IDEA TO LIFE</P>
                 <input type="text" placeholder="Tell me something..." class="inp1">
+
                 <br>
-                <button>SUBMIT</button>
+
+                <button><a href="https://accounts.google.com/v3/signin/identifier?authuser=0&continue=https%3A%2F%2Fmyaccount.google.com%2F&ec=GAlAwAE&hl=en_GB&service=accountsettings&flowName=GlifWebSignIn&flowEntry=AddSession&dsh=S1578037865%3A1701363833522629&theme=glif"> SUBMIT </a></button>
             </div>
         </div>
         <div class="ref">
@@ -96,9 +102,9 @@
                 </div>
                 <div class="cli">
                     <ul>
-                        <li>HOME</li>
-                        <li>GALLERY</li>
-                        <li>ABOUT</li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="works.html">GALLERY</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
                     </ul>
                 </div>
                 <div class="socmed">
@@ -117,7 +123,7 @@
                     </div>
                 </div>
                 <div class="cp">
-                    <h1>© 2023, Leave a MARK!</h1>
+                    <h1>© 2023, Leave a Mark!</h1>
                 </div>
             </div>
         </div>
