--- a/about.html
+++ b/about.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark Cayunda</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Poppins:wght@800&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="x-icon" href="Asset 3.png">
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -22,7 +28,7 @@
         <div class="b-content">
             <div class="b-container">
                 <div class="b-text">
-                    <h1>About Mark</h1>
+                    <h1 class="h1-text">About Mark</h1>
                     <p>Mark Cayunda is a co-founder of Curve an independent art studio based in SOCCSKSARGEN that transcends the brilliance of 
                         Mindanaon creatives in different aspects of art. He is a multidisciplinary artist 
                         currently taking up Bachelor of Multimedia Arts at Systems Technology Institute of
@@ -33,11 +39,13 @@
                         design. He was once a qualifier for the National Schools Press Conference in 
                         Pangasinan. A former EIC of two most notable campus papers in South Cotabato—in which 
                         under his time, he managed to lead the papers to win the Best in Layout and Page Design
-                         during RSPC 2019 and represented the region in NSPC 2020. Recently, one of his 
+                         during RSPC 2019 and represented the region in NSPC 2020. 
+                         <div class="space"></div>
+                         Recently, one of his 
                          designed papers was hailed as the Best in Layout and Page Design during NSPC 2023 and 
                          was declared as one of the Best School Paper in the Philippines.</p>
                     <div class="awards">
-                        <h1>Awards</h1>
+                        <h1 class="header1">Awards</h1>
                         <div class="c-sqr">
                             <div class="tab">
                                 <img src="mark7.jpeg" alt="">
@@ -77,9 +85,9 @@
                 </div>
                 <div class="cli">
                     <ul>
-                        <li>HOME</li>
-                        <li>GALLERY</li>
-                        <li>ABOUT</li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="works.html">GALLERY</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
                     </ul>
                 </div>
                 <div class="socmed">
