--- a/works.html
+++ b/works.html
@@ -6,6 +6,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mark Cayunda</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="works.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     </head>
@@ -16,42 +25,156 @@
                 <img src="30860c37-be19-4e46-a643-91ede0879489.png" alt="Logo" class="Logo">
                 <button class="btn1"><a href="index.html">HOME</a></button>
                 <button class="btn2">GALLERY</button>
-                <button class="btn3"><a href="about.html">ABOUT ME</a></button>
+                <button class="btn3"><a href="about.html">ABOUT</a></button>
                 </div>
             </div>
-            <div class="ref">
-                <div class="cright">
-                    <div class="cimg">
-                        <img src="Asset 1.png" alt="logo">
+            <div class="gallery">
+                <video autoplay loop muted play-inline class="bgVid">
+                    <source src="reels gallery.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="message">
+
+            </div>
+            <div class="g-content">
+                <div class="category">
+                    <div class="tab">
+                        <h1>Category</h1>
+                        <a href="#graphic" class="a1">Graphic Art</a>
+                        <a href="#photo">Photogprahy</a>
+                        <a href="">Videography</a>
                     </div>
-                    <div class="cli">
-                        <ul>
-                            <li>ABOUT</li>
-                            <li>JURY</li>
-                            <li>PRIVACY</li>
-                            <li>SUBSCRIPTIONS</li>
-                            <li>FAQ</li>
-                            <li>CONTENT</li>
-                            <li>TERMS</li>
-                        </ul>
-                    </div>
-                    <div class="socmed">
-                        <h1>FOLLOW ME</h1>
-                        <div class="socapp">
-                            <ul>
-                                <li><i class="fa-brands fa-x-twitter"></i></li>
-                                <li><i class="fa-brands fa-square-facebook"></i></li>
-                                <li><i class="fa-brands fa-instagram"></i></li>
-                                <li><i class="fa-brands fa-tiktok"></i></li>
-                                <li><i class="fa-brands fa-discord"></i></li>
-                                <li><i class="fa-brands fa-youtube"></i></li>
-                                <li><i class="fa-brands fa-twitch"></i></li>
-                                <li><i class="fa-regular fa-envelope"></i></li>
-                            </ul>
+                    <h1 id="graphic">Graphic Art</h1>
+                    <div class="cat">
+                        <div class="arts">
+                            <a href="img1.jpeg" target="_blank">
+                                <div class="shadow">
+                                    <div class="shw-h1">
+                                        <h1>SEEK DISCOMFORT</h1>
+                                    </div>
+                                    <a href="img1.jpeg" target="_blank">
+                                        <img src="img1.jpeg" alt="">
+                                    </a>
+                                </div>
+                            
+                            <div class="shadow">
+                                <div class="shw-h1">
+                                    <h1>SKETCH #1</h1>
+                                </div>
+                                <a href="img44.jpeg" target="_blank">
+                                    <img src="img4.jpeg" alt="">
+                                </a>
+                            </div>
+                            <div class="shadow">
+                                <div class="shw-h1">
+                                    <h1>GACHA KING</h1>
+                                </div>
+                                <a href="img3.jpeg" target="_blank">
+                                    <img src="img3.jpeg" alt="">
+                                </a>
+                            </div>
                         </div>
                     </div>
-                    <div class="cp">
-                        <h1>© 2023, Mark Cayunda</h1>
+                    <div class="cat">
+                        <div class="arts">
+                            <div class="shadow">
+                                <div class="shw-h1">
+                                    <h1>ART PIECE WE</h1>
+                                </div>
+                                <a href="img2.jpeg" target="_blank">
+                                    <img src="img2.jpeg" alt="">
+                                </a>
+                            </div>
+                            <div class="shadow">
+                                <div class="shw-h1">
+                                    <h1>SKETCH #2</h1>
+                                </div>
+                                <a href="img55.jpeg" target="_blank">
+                                    <img src="img5.jpeg" alt="">
+                                </a>
+                            </div>
+                            <div class="shadow">
+                                <div class="shw-h1">
+                                    <h1>SIGMA</h1>
+                                </div>
+                                <a href="img6.jpeg" target="_blank">
+                                    <img src="img6.jpeg" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cat">
+                        <div class="arts">
+                            <div class="shadow">
+                                <div class="shw-h1">
+                                    <h1>1001 NIGHTS</h1>
+                                </div>
+                                <a href="img7.jpeg" target="_blank">
+                                    <img src="img7.jpeg" alt="">
+                                </a>
+                            </div>
+                            <div class="shadow">
+                                <div class="shw-h1">
+                                    <h1>SKETCH #3</h1>
+                                </div>
+                                <a href="img88.jpeg" target="_blank">
+                                    <img src="img8.jpeg" alt="">
+                                </a>
+                            </div>
+                            <div class="shadow">
+                                <div class="shw-h1">
+                                    <h1>GOLDEN HOUR</h1>
+                                </div>
+                                <a href="img99.jpeg" target="_blank">
+                                    <img src="img9.jpeg" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                        <h1 id="photo">Photography</h1>
+                    </div>
+                </div>
+                <div class="ref">
+                    <div class="r-container">
+                    <div class="c-logo">
+                        <img src="Asset 1.png" alt="">
+                        <div class="c1">
+                            <div class="c2">
+                                <p>Polomolok <br>
+
+                                    South Cotabato 
+                                    Soccsksargen 
+                                    Philippines
+                                </p>
+                            </div>
+                            <div class="c3">
+                                <p>
+                                    cayundamark@gmail.com
+                                    09929292929
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="c-icons">
+                        <div class="socmed">
+                            <h1>FOLLOW ME</h1>
+                            <div class="socapp">
+                                <ul>
+                                    <li><i class="fa-brands fa-x-twitter"></i></li>
+                                    <li><i class="fa-brands fa-square-facebook"></i></li>
+                                    <li><i class="fa-brands fa-instagram"></i></li>
+                                    <li><i class="fa-brands fa-tiktok"></i></li>
+                                    <li><i class="fa-brands fa-discord"></i></li>
+                                    <li><i class="fa-brands fa-youtube"></i></li>
+                                    <li><i class="fa-brands fa-twitch"></i></li>
+                                    <li><i class="fa-regular fa-envelope"></i></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="crt">
+                        <h1>© 2023, Leave a Mark!</h1>
                     </div>
                 </div>
             </div>
