--- a/index.html
+++ b/index.html
@@ -36,52 +36,7 @@
             </div>
             <div class="c-button">
                 <a href="" class="B1"></a>
-                <a href="" class="B2">SHOW GALLERY</a>
-            </div>
-        </div>
-        <div class="b2-content">
-            <div class="h-content">
-                <h2>ARTWORKS</h2>
-                <a href="works.html">VIEW ALL</a>
-            </div>
-            <div class="cir">
-                <p class="p1">uwu</p
-            </div>
-            <div class="circ">
-                <p class="pc">uwu</p
-            </div>
-            <div class="l-tab">
-                <div class="f-tab">
-                    <div class="f1-tab">
-                        <img src="TGA_Vote_Discovery_Wide.png" alt="tga" class="pic">
-                        <h3>THE GAME AWARDS VOTE IN FORTNITE!</h3>
-                    </diV>
-                </div>
-                <div class="s-tab">
-                        <div class="f1-tab">
-                            <img src="nom_monday.jpg" alt="tga" class="pic">
-                            <h3>MONDAY: NOMINEES ANNOUNCED</h3>
-                        </div>  
-                </div>
-                <div class="t-tab">
-                    <div class="f1-tab">
-                         <img src="tga23_tickets_now.jpg" alt="tga" class="pic">
-                         <h3>PUBLIC TICKET</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="content2">
-                <h2>TOP FAVORITE ARTS</h2>
-                <div class="p-content">
-                    <div class="pic">
-                        <img src="home_explore_1_23.jpg" alt="" class="front">
-                        <img src="home_explore_1_23_hover.jpg" alt="" class="back">
-                    </div>
-                    <div class="pic2">
-                        <img src="Capture2.PNG" alt="" class="front">
-                        <img src="home_explore_2_23_hover.jpg" alt="" class="back">
-                    </div>
-                </div> 
+                <a href="works.html" class="B2">SHOW GALLERY</a>
             </div>
         </div>
         <div class="mail">
@@ -96,37 +51,47 @@
             </div>
         </div>
         <div class="ref">
-            <div class="cright">
-                <div class="cimg">
-                    <img src="Asset 1.png" alt="logo">
+            <div class="r-container">
+            <div class="c-logo">
+                <img src="Asset 1.png" alt="">
+                <div class="c1">
+                    <div class="c2">
+                        <p>Polomolok <br>
+
+                            South Cotabato 
+                            Soccsksargen 
+                            Philippines
+                        </p>
+                    </div>
+                    <div class="c3">
+                        <p>
+                            cayundamark13@gmail.com
+                            09491276279
+                        </p>
+                    </div>
                 </div>
-                <div class="cli">
-                    <ul>
-                        <li><a href="index.html">HOME</a></li>
-                        <li><a href="works.html">GALLERY</a></li>
-                        <li><a href="about.html">ABOUT</a></li>
-                    </ul>
-                </div>
+            </div>
+            <div class="c-icons">
                 <div class="socmed">
                     <h1>FOLLOW ME</h1>
                     <div class="socapp">
                         <ul>
-                            <li><i class="fa-brands fa-x-twitter"></i></li>
-                            <li><i class="fa-brands fa-square-facebook"></i></li>
-                            <li><i class="fa-brands fa-instagram"></i></li>
-                            <li><i class="fa-brands fa-tiktok"></i></li>
-                            <li><i class="fa-brands fa-discord"></i></li>
-                            <li><i class="fa-brands fa-youtube"></i></li>
-                            <li><i class="fa-brands fa-twitch"></i></li>
-                            <li><i class="fa-regular fa-envelope"></i></li>
+                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><li><i class="fa-brands fa-x-twitter"></i></li></a>
+                            <a href="https://www.facebook.com/hicurvestudio" target="_blank"><li><i class="fa-brands fa-square-facebook"></i></li></a>
+                            <a href="https://www.instagram.com/mxxrcxx_/" target="_blank"><li><i class="fa-brands fa-instagram"></i></li></a>
+                            <a href="https://www.tiktok.com/@sigma_monkey0?lang=en" target="_blank"><li><i class="fa-brands fa-tiktok"></i></li></a>
+                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><li><i class="fa-brands fa-discord"></i></li></a>
+                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><li><i class="fa-brands fa-youtube"></i></li></a>
+                            <a href="https://www.twitch.tv/cdawgva" target="_blank"><li><i class="fa-brands fa-twitch"></i></li></a>
+                            <a href="https://www.youtube.com/watch?v=KqJO_3UsJ-Q" target="_blank"><li><i class="fa-regular fa-envelope"></i></li></a>
                         </ul>
                     </div>
                 </div>
-                <div class="cp">
-                    <h1>© 2023, Leave a Mark!</h1>
-                </div>
             </div>
-        </div>
+            </div>
+            <div class="crt">
+                <h1>© 2023, Leave a Mark!</h1>
+            </div>
     </div>
 </body>
 </html>
