--- a/about.html
+++ b/about.html
@@ -79,37 +79,47 @@
             </div>
         </div>
         <div class="ref">
-            <div class="cright">
-                <div class="cimg">
-                    <img src="Asset 1.png" alt="logo">
+            <div class="r-container">
+            <div class="c-logo">
+                <img src="Asset 1.png" alt="">
+                <div class="c1">
+                    <div class="c2">
+                        <p>Polomolok <br>
+
+                            South Cotabato 
+                            Soccsksargen 
+                            Philippines
+                        </p>
+                    </div>
+                    <div class="c3">
+                        <p>
+                            cayundamark13@gmail.com
+                            09491276279
+                        </p>
+                    </div>
                 </div>
-                <div class="cli">
-                    <ul>
-                        <li><a href="index.html">HOME</a></li>
-                        <li><a href="works.html">GALLERY</a></li>
-                        <li><a href="about.html">ABOUT</a></li>
-                    </ul>
-                </div>
+            </div>
+            <div class="c-icons">
                 <div class="socmed">
                     <h1>FOLLOW ME</h1>
                     <div class="socapp">
                         <ul>
-                            <li><i class="fa-brands fa-x-twitter"></i></li>
-                            <li><i class="fa-brands fa-square-facebook"></i></li>
-                            <li><i class="fa-brands fa-instagram"></i></li>
-                            <li><i class="fa-brands fa-tiktok"></i></li>
-                            <li><i class="fa-brands fa-discord"></i></li>
-                            <li><i class="fa-brands fa-youtube"></i></li>
-                            <li><i class="fa-brands fa-twitch"></i></li>
-                            <li><i class="fa-regular fa-envelope"></i></li>
+                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><li><i class="fa-brands fa-x-twitter"></i></li></a>
+                            <a href="https://www.facebook.com/hicurvestudio" target="_blank"><li><i class="fa-brands fa-square-facebook"></i></li></a>
+                            <a href="https://www.instagram.com/mxxrcxx_/" target="_blank"><li><i class="fa-brands fa-instagram"></i></li></a>
+                            <a href="https://www.tiktok.com/@sigma_monkey0?lang=en" target="_blank"><li><i class="fa-brands fa-tiktok"></i></li></a>
+                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><li><i class="fa-brands fa-discord"></i></li></a>
+                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><li><i class="fa-brands fa-youtube"></i></li></a>
+                            <a href="https://www.twitch.tv/cdawgva" target="_blank"><li><i class="fa-brands fa-twitch"></i></li></a>
+                            <a href="https://www.youtube.com/watch?v=KqJO_3UsJ-Q" target="_blank"><li><i class="fa-regular fa-envelope"></i></li></a>
                         </ul>
                     </div>
                 </div>
-                <div class="cp">
-                    <h1>© 2023, Leave a Mark!</h1>
-                </div>
             </div>
-        </div>
+            </div>
+            <div class="crt">
+                <h1>© 2023, Leave a Mark!</h1>
+            </div>
     </div>
 </body>
 </html>
